q-a card image stretching resolved

--- a/styles/style.css
+++ b/styles/style.css
@@ -112,6 +112,7 @@ nav{
 }
 .q-a-card{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 5% 5%;
     border-radius: 10px;
